--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "google-map-react": "^2.1.10",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.1",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
