--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.1",
