--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0",
-    "swr": "^0.5.6"
+    "supercluster": "^7.1.3",
+    "swr": "^0.5.6",
+    "use-supercluster": "^0.2.9"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.1",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
+    "@types/supercluster": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-styled-components": "^1.12.0",
