feat: add marker battery variant

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "@/pages/*": ["src/pages/*"],
       "@/utils/*": ["src/utils/*"],
       "@/data/*": ["src/data/*"],
-      "@/model/*": ["src/model/*"]
+      "@/model/*": ["src/model/*"],
+      "@/theme": ["src/theme"]
+
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
