--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-table": "^7.7.0",
     "styled-components": "^5.3.0",
     "supercluster": "^7.1.3",
     "swr": "^0.5.6",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/google-map-react": "^2.1.1",
     "@types/react": "17.0.11",
+    "@types/react-table": "^7.7.1",
     "@types/styled-components": "^5.1.10",
     "@types/supercluster": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
