--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "google-map-react": "^2.1.10",
     "next": "11.0.1",
     "react": "17.0.2",
