--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.0.2",
     "google-map-react": "^2.1.10",
+    "lodash": "^4.17.21",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.1",
+    "@types/lodash": "^4.14.170",
     "@types/react": "17.0.11",
     "@types/react-table": "^7.7.1",
     "@types/styled-components": "^5.1.10",
