--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap": "^5.0.2",
@@ -22,6 +23,8 @@
     "use-supercluster": "^0.2.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/google-map-react": "^2.1.1",
     "@types/lodash": "^4.14.170",
     "@types/react": "17.0.11",
@@ -30,6 +33,7 @@
     "@types/supercluster": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "babel-jest": "^27.0.6",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "7.29.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -41,6 +45,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "react-is": "^17.0.2",
     "typescript": "4.3.4"
